--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,14 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Comparador de Gostos de Filmes</h1>
+  <h1>Recomendação de Filmes e Séries</h1>
+
+  <div class="user-section">
+    <input type="text" id="userName" placeholder="Digite seu nome...">
+    <button id="loadBtn">Carregar Minha Lista</button>
+    <button id="saveBtn">Salvar Lista</button>
+  </div>
+
   <div id="search">
     <input type="text" id="searchInput" placeholder="Buscar filme...">
     <button id="searchBtn">Buscar</button>
@@ -14,13 +21,13 @@
 
   <div id="results"></div>
 
-  <h2>Suas Preferências</h2>
+  <h2>Preferências de <span id="listOwner">...</span></h2>
   <ul id="userList"></ul>
 
-  <h2>Comparar com outro usuário</h2>
-  <button id="compareBtn">Comparar</button>
+  <h2>Recomendações para você</h2>
+  <button id="recommendBtn">Buscar Recomendações</button>
   
-  <p id="result"></p>
+  <div id="recommendationResult"></div>
 
   <script src="script.js"></script>
 </body>
